data/derived/fa15/progs/unify/prog2711.ml.out
Characters 93-95:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type (int list -> 'a -> int list) list
       but an expression was expected of type 'a list
       The type variable 'a occurs inside int list -> 'a -> int list
